# gitpulse

./: .dockerignore  .env.example  .gitignore  BRAINSTORM.md  Cargo.toml  Dockerfile  README.md  SYSTEM_DESIGN.md  system_prompt.txt
src/: lib.rs  main.rs
src/api/: mod.rs  routes.rs  state.rs
src/config/: logging.rs  settings.rs
src/models/: a2a.rs  mod.rs  query.rs  repository.rs
src/services/: ai.rs  cache.rs  date_parser.rs  github.rs  mod.rs  rate_limiter.rs  scheduler.rs
src/utils/: helpers.rs  tasks.rs
tests/: mod.rs  test_a2a.rs  test_client_search.rs  test_query_parser.rs
