[package]
name = "gitpulse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = "0.4.42"
dashmap = "6.1.0"
dotenvy = "0.15.7"
envy = "0.4.2"
google-ai-rs = "0.3.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-cron-scheduler = "0.15.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "gitpulse"

[lib]
name = "gitpulse"
path = "src/lib.rs"

[[test]]
name = "gitpulse"
path = "tests/mod.rs"
